--- a/styling/style.css
+++ b/styling/style.css
@@ -1,3 +1,51 @@
-h1 {
-  color: red;
+section {
+  min-height: 100vh;
+}
+
+.section1 {
+  background-color: greenyellow;
+}
+
+.section2 {
+  background-color: blue;
+}
+
+header {
+  color: black;
+  background-color: cyan;
+  width: 100%;
+  height: 10%;
+}
+
+aside {
+  width: 220px;
+  height: 250px;
+}
+
+/***************POSITIONING***************/
+.section1 {
+  position: relative;
+}
+
+.section2 {
+  background-color: blue;
+  position: relative;
+}
+
+header {
+  position: absolute;
+}
+
+aside {
+  background-color: pink;
+  position: absolute;
+  left: 50px;
+  top: 70px;
+}
+
+button {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 2%;
+  left: 90%;
 }/*# sourceMappingURL=style.css.map */
