--- a/styling/style.css
+++ b/styling/style.css
@@ -1,3 +1,9 @@
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 section {
   min-height: 100vh;
 }
@@ -63,14 +69,34 @@ button {
   color: purple;
 }
 
-.red {
+.gradientquote {
   outline: 3px solid red;
   color: red;
 }
 
-.yellow {
-  outline: 3px solid yellow;
-  color: yellow;
+blockquote {
+  padding: 0;
+  margin: 20px;
+  position: relative;
+  display: inline;
+}
+blockquote::before, blockquote::after {
+  content: '"';
+  display: block;
+  position: absolute;
+  font-size: 3rem;
+}
+blockquote::before {
+  top: -3px;
+  left: -3px;
+}
+blockquote::after {
+  bottom: -3px;
+  right: -3px;
+}
+
+.gradientquote {
+  display: none;
 }
 
 .blue {
@@ -80,14 +106,24 @@ button {
 
 .spaceventures h2 span:first-of-type {
   display: block;
+  position: relative;
+  z-index: 1;
 }
 .spaceventures h2 span:nth-of-type(2) {
   color: green;
+  position: relative;
+  left: 10px;
+  top: -20px;
+  z-index: 0;
 }
 
 .grey {
   outline: 3px solid grey;
   color: grey;
+}
+
+.majortom {
+  display: none;
 }
 
 @media screen and (min-width: 1024px) {
@@ -97,5 +133,15 @@ button {
   }
   .brown, .grey {
     width: 50%;
+  }
+  .majortom {
+    display: block;
+    width: 100px;
+    height: auto;
+    float: right;
+    transform: rotate(3deg);
+  }
+  .gradientquote {
+    display: block;
   }
 }/*# sourceMappingURL=style.css.map */
