--- a/styling/style.scss
+++ b/styling/style.scss
@@ -1,3 +1,9 @@
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+ }
+
 section{
     min-height: 100vh;
 
@@ -68,15 +74,39 @@ button{
     color: purple;
 }
 
-.red{
+.gradientquote{
     outline: 3px solid red;
     color: red;
 }
 
-.yellow{
-    outline: 3px solid yellow;
-    color: yellow;
+blockquote{
+    padding: 0;
+    margin: 20px;
+    position: relative;
+    display: inline;
+    &::before, &::after {
+        content: '"';
+        display: block;
+        position: absolute;
+        font-size: 3rem;
+    }
+    &::before{
+        top: -3px;
+        left: -3px;
+    }
+    &::after{
+        bottom: -3px;
+        right: -3px;
+
+    }
 }
+
+.gradientquote{
+    display: none;
+
+}
+
+
 
 .blue{
     outline: 3px solid blue;
@@ -87,9 +117,15 @@ button{
     h2{
         span:first-of-type {
             display: block;
+            position: relative;
+            z-index: 1;
         }
         span:nth-of-type(2) {
             color: green;
+            position: relative;
+            left: 10px;
+            top: -20px;
+            z-index: 0;
         }
     }
 }
@@ -97,6 +133,10 @@ button{
 .grey{
     outline: 3px solid grey;
     color: grey;
+}
+
+.majortom {
+    display: none;
 }
 
 @media screen and (min-width: 1024px) {
@@ -107,4 +147,16 @@ button{
     .brown, .grey {
         width: 50%;
     }
+    .majortom {
+        display: block;
+        width: 100px;
+        height: auto;
+        float: right;
+        transform: rotate(3deg);
+    }
+    .gradientquote {
+        display: block;
+    }
  }
+
+
