--- a/styling/style.css
+++ b/styling/style.css
@@ -1,147 +1,1 @@
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-section {
-  min-height: 100vh;
-}
-
-.section1 {
-  background-color: greenyellow;
-  min-height: 100vh;
-}
-
-.section2 {
-  background-color: blue;
-  min-height: 100vh;
-}
-
-header {
-  color: black;
-  background-color: cyan;
-  width: 100%;
-  height: 10%;
-}
-
-aside {
-  width: 220px;
-  height: 250px;
-}
-
-/***************POSITIONING***************/
-.section1 {
-  position: relative;
-}
-
-.section2 {
-  background-color: rgb(159, 159, 201);
-  position: relative;
-}
-
-header {
-  position: absolute;
-}
-
-aside {
-  background-color: pink;
-  position: absolute;
-  left: 50px;
-  top: 70px;
-}
-
-button {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 2%;
-  left: 90%;
-}
-
-/*************section 2******/
-.brown {
-  outline: 3px solid brown;
-  color: brown;
-}
-
-.purple {
-  outline: 3px solid purple;
-  color: purple;
-}
-
-.gradientquote {
-  outline: 3px solid red;
-  color: red;
-}
-
-blockquote {
-  padding: 0;
-  margin: 20px;
-  position: relative;
-  display: inline;
-}
-blockquote::before, blockquote::after {
-  content: '"';
-  display: block;
-  position: absolute;
-  font-size: 3rem;
-}
-blockquote::before {
-  top: -3px;
-  left: -3px;
-}
-blockquote::after {
-  bottom: -3px;
-  right: -3px;
-}
-
-.gradientquote {
-  display: none;
-}
-
-.blue {
-  outline: 3px solid blue;
-  color: blue;
-}
-
-.spaceventures h2 span:first-of-type {
-  display: block;
-  position: relative;
-  z-index: 1;
-}
-.spaceventures h2 span:nth-of-type(2) {
-  color: green;
-  position: relative;
-  left: 10px;
-  top: -20px;
-  z-index: 0;
-}
-
-.grey {
-  outline: 3px solid grey;
-  color: grey;
-}
-
-.majortom {
-  display: none;
-}
-
-@media screen and (min-width: 1024px) {
-  .section2 {
-    display: flex;
-    gap: 100px;
-  }
-  .brown, .grey {
-    width: 50%;
-  }
-  .majortom {
-    display: block;
-    width: 100px;
-    height: auto;
-    float: right;
-    transform: rotate(3deg);
-  }
-  .gradientquote {
-    display: block;
-  }
-}/*# sourceMappingURL=style.css.map */
+.clearfix::after{content:"";clear:both;display:table}.section1{background-color:#adff2f;position:relative;min-height:100vh}header{color:#000;background-color:aqua;position:absolute;width:100%;height:10%}aside{background-color:pink;border:4px solid #000;position:absolute;padding:20px;margin-bottom:0;left:50px;top:70px;width:220px;height:250px;font-family:Verdana,Geneva,Tahoma,sans-serif;font-weight:600;font-size:3rem;text-align:center;line-height:60px}.readourstory{position:absolute;min-width:220px;bottom:0;font-family:Verdana,Geneva,Tahoma,sans-serif;font-size:1rem;font-weight:200;text-align:left;margin-bottom:0}.pil{position:absolute;top:17px;width:30px;height:30px}button{position:-webkit-sticky;position:sticky;top:2%;left:90%}.section2{background-color:#7b7baf;position:relative;min-height:100vh}.brown{outline:3px solid brown;color:brown}.purple{outline:3px solid purple;color:purple}.gradientquote{outline:3px solid red;color:red}blockquote{padding:0;margin:20px;position:relative;display:inline}blockquote::before,blockquote::after{content:'"';display:block;position:absolute;font-size:3rem}blockquote::before{top:-3px;left:-3px}blockquote::after{bottom:-3px;right:-3px}.gradientquote{display:none}.blue{outline:3px solid blue;color:blue}.spaceventures h2 span:first-of-type{display:block;position:relative;z-index:1}.spaceventures h2 span:nth-of-type(2){color:green;position:relative;left:10px;top:-20px;z-index:0}.grey{outline:3px solid gray;color:gray}.majortom{display:none}@media screen and (min-width: 1024px){.section2{display:flex;gap:100px}.brown,.grey{width:50%}.majortom{display:block;width:100px;height:auto;float:right;transform:rotate(3deg)}.gradientquote{display:block}}/*# sourceMappingURL=style.css.map */
