--- a/styling/style.scss
+++ b/styling/style.scss
@@ -24,7 +24,7 @@ header{
  
  aside{
     
-     background-color: pink;
+     background-color: rgba(255, 255, 255, 0.473);
      border: 4px solid black;
      position: absolute;
      padding: 20px;
@@ -54,9 +54,19 @@ header{
 
  .pil{
     position: absolute;
-    top: 17px;
+    top: 18px;
+    left: 120px;
     width: 30px;
     height: 30px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    transition: 1s;
+ }
+
+ .readourstory:hover .pil{
+    transform: translateX(100%);
+
  }
      
  button{
