--- a/styling/style.scss
+++ b/styling/style.scss
@@ -4,24 +4,44 @@
     display: table;
  }
 
-
+/**********************************************/
 /******************FIRST_PAGE******************/
-
+/**********************************************/
 
 .section1{
-    background-color: greenyellow;
+ 
+    background-image: url(../images/adam-miller-dBaz0xhCkPY-unsplash.jpg);
     position: relative;
     min-height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 100%;
+    
+    
 }
 
 header{
-    color:black;
-    background-color: cyan;
-    position: absolute;
+    
+    background-color: transparent;
+    position: sticky;
     width: 100%;
-    height: 10%;
+    top: 0;
+    right: 0;
+   
  }
+
+
+ button{
+    position: sticky;
+    top: 2%;
+    left: 90%;
+    
+}
  
+ /***************TO_THE_MOON_BOX***************/
+
  aside{
     
      background-color: rgba(255, 255, 255, 0.473);
@@ -31,13 +51,13 @@ header{
      margin-bottom: 0;
      left: 50px;
      top: 70px;
-     width: 220px;
-     height: 250px;
+     width: 150px;
+     height: 175px;
      font-family: Verdana, Geneva, Tahoma, sans-serif;
      font-weight: 600;
-     font-size: 3rem;
+     font-size: 2.4rem;
      text-align: center;
-     line-height: 60px;
+     line-height: 50px;
  }
 
  .readourstory{
@@ -45,7 +65,7 @@ header{
     min-width: 220px;
     bottom: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 200;
     text-align: left;
     margin-bottom: 0;
@@ -54,26 +74,21 @@ header{
 
  .pil{
     position: absolute;
-    top: 18px;
-    left: 120px;
+    top: 13px;
+    left: 110px;
     width: 30px;
     height: 30px;
     border: none;
     outline: none;
     background-color: transparent;
-    transition: 1s;
+    transition: 0.8s;
  }
 
  .readourstory:hover .pil{
-    transform: translateX(100%);
-
+    transform: translateX(50%);
  }
      
- button{
-    position: sticky;
-    top: 2%;
-    left: 90%;
-}
+
  
 /*********************************************/
 /*****************SECOND_PAGE*****************/
@@ -81,10 +96,17 @@ header{
 
 
 .section2{
-    background-color: rgb(123, 123, 175);
     position: relative;
     min-height: 100vh;
+    background-image: url(../images/raphael-nogueira-svbDI1Pq30s-unsplash.jpg);
+    background-size: 100%;
+    padding: 0;
+    margin: 0;
 }
+
+
+
+
 
 
 /*****************TEXT_BOXES*****************/
@@ -92,24 +114,34 @@ header{
 
 .brown{
     outline: 3px solid brown;
-    color: brown;
+  
+    
 }
 
 .purple{
+    padding: 20px;
+    line-height: 20px;
+    font-family:  'Rubik', sans-serif;
+    font-size: 0.8rem;
     outline: 3px solid purple;
-    color: purple;
+    color: white;
 }
 
 .gradientquote{
+   
     outline: 3px solid red;
     color: red;
 }
 
 blockquote{
-    padding: 0;
-    margin: 20px;
+   
+    left: 30px;
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.3rem;
+    font-style: italic;
     position: relative;
-    display: inline;
+    padding-bottom: 20px;
+    color: white;
     &::before, &::after {
         content: '"';
         display: block;
@@ -117,15 +149,19 @@ blockquote{
         font-size: 3rem;
     }
     &::before{
-        top: -3px;
-        left: -3px;
+        
+        top: -13px;
+        left: -24px;
     }
     &::after{
         bottom: -3px;
-        right: -3px;
+        right: 300px;
+        position: absolute;
 
     }
 }
+
+
 
 .gradientquote{
     display: none;
@@ -134,22 +170,37 @@ blockquote{
 
 .blue{
     outline: 3px solid blue;
-    color: blue;
+    padding: 20px;
+    font-family: 'Rubik', sans-serif;
+    color: white;
+    font-size: 0.8rem;
+    line-height: 20px;
 }
 
 .spaceventures{
+    position: relative;
+    
     h2{
+        margin-bottom: 0;
+        padding: 0;
+        
         span:first-of-type {
             display: block;
             position: relative;
             z-index: 1;
+            font-family: 'Rubik', sans-serif;
+            font-size: 4rem;
+            color: white;
+            align-content: center;
         }
         span:nth-of-type(2) {
-            color: green;
+            color: rgba(255, 255, 255, 0.582);
             position: relative;
-            left: 10px;
-            top: -20px;
+            left: 75px;
+            top: -50px;
             z-index: 0;
+            font-size: 4rem;
+            align-content: center;
         }
     }
 }
