--- a/styling/style.scss
+++ b/styling/style.scss
@@ -13,6 +13,7 @@
     background-image: url(../images/adam-miller-dBaz0xhCkPY-unsplash.jpg);
     position: relative;
     min-height: 100vh;
+    min-width: 100vh;
     padding: 0;
     margin: 0;
     background-repeat: no-repeat;
@@ -33,12 +34,101 @@ header{
  }
 
 
- button{
-    position: sticky;
-    top: 2%;
-    left: 90%;
+ .hamburgare{
+    width: 35px;
+    height: 35px;
+    background: transparent;
+    border: 0;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 2;
+    pointer-events: none;
     
 }
+
+.hamburgare span{
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    border-radius: 6px;
+    margin-bottom: 4px;
+}
+
+input{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 2;
+    width: 35px;
+    height: 35px;
+    opacity: 0;
+}
+
+input:checked + button span{
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+}
+
+input:checked + .menu button span:nth-child(2){
+    opacity: 0;
+}
+
+input:checked + .menu button span:nth-child(1){
+    transform: rotate(45deg);   
+}
+
+input:checked + .menu button span:nth-child(3){
+    transform: rotate(-45deg);   
+}
+
+nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(237, 227, 148, 0.6);
+    width: 100vh;
+    height: 100vh;
+    opacity: 0;
+    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+    visibility: hidden;
+
+}
+
+    
+.menu{
+    min-width: 100vh;
+}
+
+
+input:checked + .menu nav{
+    display: block;
+    opacity: 1;
+    visibility: visible;
+}
+
+
+
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
+    text-align: center;
+    font-family: rubik, sans-serif;
+    font-size: 4rem;
+    font-weight: 600;
+    text-shadow: 0px 4px 2px gray;
+    
+
+}
+
+
+
  
  /***************TO_THE_MOON_BOX***************/
 
@@ -47,11 +137,11 @@ header{
      background-color: rgba(255, 255, 255, 0.473);
      border: 4px solid black;
      position: absolute;
-     padding: 20px;
+     padding: 30px;
      margin-bottom: 0;
      left: 50px;
      top: 70px;
-     width: 150px;
+     min-width: 15%;
      height: 175px;
      font-family: Verdana, Geneva, Tahoma, sans-serif;
      font-weight: 600;
@@ -232,6 +322,7 @@ blockquote{
     .gradientquote {
         display: block;
     }
+    
  }
 
 
