--- a/styling/style.scss
+++ b/styling/style.scss
@@ -4,13 +4,15 @@
     display: table;
  }
 
- /**********************************************/
-/******************BOTH_PAGES******************/
-/**********************************************/
 
 .bothpages{
     min-width: 100vw;
 }
+
+ /**********************************************/
+/******************NAVIGATION******************/
+/**********************************************/
+
 
 button{
     width: 35px;
@@ -62,8 +64,6 @@ input:checked +  .menu button span:nth-child(1){
 
 input:checked + .menu button span:nth-child(3){
     transform: rotate(-45deg);   
-
-    
 }
 
 nav{
@@ -82,7 +82,6 @@ input:checked + .menu nav{
     visibility: visible;
     opacity: 1;
     z-index: 1;
-   
 }
 
 ul{
@@ -98,8 +97,6 @@ ul{
     font-size: 4rem;
     font-weight: 600;
     text-shadow: 0px 4px 2px gray;
-    
-    
 }
 
 
@@ -169,6 +166,16 @@ ul{
 
  .readourstory:hover .pil{
     transform: translateX(50%);
+ }
+
+ .pil3{
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    height: 60px;
+    width: 60px;
+    color: white;
+    
  }
      
 
@@ -258,7 +265,10 @@ blockquote{
     line-height: 20px;
     outline: none;
 }
+.tomlink{
+    color: rgb(215, 65, 165);
 
+}
 .spaceventures{
     position: relative;
     
@@ -323,6 +333,11 @@ footer{
     right: 10%;
     
 }
+
+.pil2{
+    color: rgb(215, 65, 165);
+}
+
 @keyframes glow{
     from{
         text-shadow: 0 0 20px rgb(215, 65, 165);
@@ -338,9 +353,11 @@ footer{
         display: flex;
         gap: 100px;
     }
+
     .brown, .grey {
         width: 50%;
     }
+
     .majortom {
         display: block;
         width: 100px;
@@ -349,9 +366,11 @@ footer{
         transform: rotate(3deg);
         bottom: 10px;
     }
+
     .gradientquote {
         display: block;
     }
+
     li:hover{
     text-decoration: underline;
     text-decoration-thickness: 7px;
