--- a/styling/style.scss
+++ b/styling/style.scss
@@ -201,7 +201,7 @@ ul{
 
 
 .purple{
-    padding: 20px;
+    padding-left: 10px;
     line-height: 20px;
     font-family:  'Rubik', sans-serif;
     font-size: 0.8rem;
@@ -213,11 +213,12 @@ ul{
     font-family: 'Rubik', 'sans-serif';
     font-size: 2rem;
     font-style: italic;
-    padding: 20px;
+    padding:10px;
+    padding-right: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to top left, #da70d634, #e0dae05a,  #da70d631,);
+    background: linear-gradient(to top left, #d200a1ae, #e0dae05a,  #d200a1aa, #e0dae05a, #d200a1b3, #e0dae05a);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     background-clip:none;
@@ -229,13 +230,14 @@ blockquote{
     font-size: 1.3rem;
     font-style: italic;
     position: relative;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
+    padding-top: 15px;
     color: white;
     &::before, &::after {
         content: '"';
         font-family:'Rubik' sans-serif;
         display: block;
-        color: rgba(194, 193, 193, 0.442);
+        color: #d200a1bd;
         position: absolute;
         font-size: 4rem;
     }
@@ -258,7 +260,9 @@ blockquote{
 }
 
 .blue{
-    padding: 20px;
+    padding:10px;
+    padding-right: 20px;
+    padding-top: 20px;
     font-family: 'Rubik', sans-serif;
     color: white;
     font-size: 0.8rem;
@@ -266,7 +270,7 @@ blockquote{
     outline: none;
 }
 .tomlink{
-    color: rgb(215, 65, 165);
+    color: #D200A2;
 
 }
 .spaceventures{
@@ -299,7 +303,15 @@ blockquote{
 }
 
 .grey{
-    color: grey;
+    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 20;
+}
+
+.brown{
+    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 20;
 }
 
 .majortom {
@@ -315,7 +327,7 @@ footer{
     background-color: rgba(2, 2, 86, 0.605);
     font-family: 'Rubik', 'sans-serif';
     font-size: 1.7ch;  
-    color:rgb(215, 65, 165);
+    color:#D200A2;
     animation: glow 1s ease-in-out infinite alternate;
     visibility: hidden;
 }
@@ -335,16 +347,16 @@ footer{
 }
 
 .pil2{
-    color: rgb(215, 65, 165);
+    color: #D200A2;
 }
 
 @keyframes glow{
     from{
-        text-shadow: 0 0 20px rgb(215, 65, 165);
+        text-shadow: 0 0 20px #D200A2;
     }
     to{
-        text-shadow: 0 0 30px rgb(215, 65, 165),
-                     0 0 10px rgb(215, 65, 165);
+        text-shadow: 0 0 30px #D200A2,
+                     0 0 10px #D200A2;
     }
 }
 
@@ -374,7 +386,7 @@ footer{
     li:hover{
     text-decoration: underline;
     text-decoration-thickness: 7px;
-    text-decoration-color: orchid;
+    text-decoration-color: #D200A2;
     text-underline-offset: 10px;
     transition: 0.3s ease-in-out;
     }
