--- a/styling/style.scss
+++ b/styling/style.scss
@@ -194,7 +194,6 @@ ul{
 }
 
 
-
 /*********************************************/
 /*****************TEXT_BOXES******************/
 /*********************************************/
@@ -328,7 +327,6 @@ blockquote{
 
 .tomlink{
     color: #D200A2;
-
 }
 
 .pil2{
@@ -382,7 +380,7 @@ footer{
 }
 
 /*********************************************/
-/*****************MEDIA_QUERYS****************/
+/*****************MEDIA-QUERIES***************/
 /*********************************************/
 
 @media screen and (min-width: 1024px) {
@@ -409,11 +407,10 @@ footer{
     }
 
     li:hover{
-    text-decoration: underline;
-    text-decoration-thickness: 7px;
-    text-decoration-color: #D200A2;
+    text-decoration-line: underline;
     text-underline-offset: 10px;
-    transition: 0.3s ease-in-out;
+    transition: 0.5s ease-in-out;
+    text-decoration-color: #D200A2;
     }
 
     footer{
