--- a/styling/style.scss
+++ b/styling/style.scss
@@ -202,7 +202,6 @@ ul{
 .containerfirstcol{
     padding-right: 20px;
     padding-left: 10px;
-    padding-right: 20;
 }
 
 .spaceventures{
@@ -248,8 +247,6 @@ ul{
 .tomheading{
     font-size: 1.8rem;
     font-weight: 400;
-    padding: none;
-    margin: none;
     line-height: 2;
 }
 
@@ -265,7 +262,7 @@ blockquote{
     color: white;
     &::before, &::after {
         content: '"';
-        font-family:'Rubik' sans-serif;
+        font-family:'Rubik', sans-serif;
         display: block;
         color: #d200a1bd;
         font-size: 6rem;
@@ -285,7 +282,6 @@ blockquote{
 .containersecondcol{
     padding-right: 20px;
     padding-left: 10px;
-    padding-right: 20;
     padding-bottom: 20px;
 }
 
@@ -303,7 +299,9 @@ blockquote{
     background: linear-gradient(to top left, #d200a1ae, #e0dae05a,  #d200a1aa, #e0dae05a, #d200a1b3, #e0dae05a);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    background-clip:none;
+    background-clip: none;          /* 'none' is not a valid background-clip value, 
+                                    but this is a shortcut to make the gradient w/o background*/
+    
 }
 
 .gradientquote{
